TestSuite/errors/err0234.pas
type t1<T> = class end;

begin
  var a := t1&<byte>;
end.